--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agni",
   "description": "Simple and intuitive MVC web framework for node.js",
-  "version": "0.1.0",
+  "version": "0.1.0beta",
   "author": "Lorenzo Tabacchini <lortabac@gmx.com>",
   "dependencies": {
     "express": "3.x",
@@ -11,6 +11,7 @@
     "jade": "*"
   },
   "scripts": {
+    "test": "make test",
     "start": "node ./server.js",
     "stop": "node ./script/stop.js"
   },
