--- a/skeleton/package.json
+++ b/skeleton/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "forever": "*"
+    "forever": "*",
+    "agni-framework": "*"
   },
   "scripts": {
     "start": "node ./server.js",
