--- a/skeleton/package.json
+++ b/skeleton/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "express": "3.x",
     "forever": "*",
-    "agni-framework": "*"
+    "agni-framework": "1.x"
   },
   "scripts": {
     "start": "node ./server.js",
